# grok_raylib_c

./: CMakeLists.txt  README.md
include/: game.h
src/: game.c  main.c
